# symPACK

./: CMakeLists.txt  LICENSE  LICENSE.txt  README.md  TODO.md  analyze_time.py  build_mathias.cmake  edison.cmake  intel.cmake  perlregex.sh  pythonVisual.py
MatrixConverter/bebop_make/: COPYING  Makefile.include  Makefile.include.cygwin  Makefile.include.darwin  Makefile.include.solaris  README  ecl  options  setup
MatrixConverter/bebop_util/: BUGS  COPYING  ChangeLog  Doxyfile  Makefile  README
MatrixConverter/sparse_matrix_converter/: BUGS  COPYING  ChangeLog  Doxyfile  Makefile  README  TODO  sparse_matrix_converter
Results/: 27points.csv  Sparse Cholesky.ipynb  lb_cost_impact.24x24x24_27.csv  lb_cost_impact.24x24x24_7.csv  lb_time_impact.24x24x24_27.csv  mapping_impact.csv  order_cost_grid.csv  parse.py
Results/pgf/: ss_ BOX 24x24x24_27_ROW2D_AMD.pgf  ss_ BOX 24x24x24_27_ROW2D_METIS.pgf  ss_ BOX 24x24x24_27_ROW2D_MMD.pgf  ss_ BOX 24x24x24_27_ROW2D_NDBOX.pgf  ss_ BOX 24x24x24_27_ROW2D_SCOTCH.pgf  ss_G3_Circuit.pgf  ss_LB BOX 24x24x24_27_ROW2D_SUBCUBE-FO_SCOTCH.pgf  ss_LB BOX 24x24x24_7_ROW2D_SUBCUBE-FO_SCOTCH.pgf  ss_af_shell7.pgf  ss_audikw_1.pgf  ss_bone010.pgf  ss_boneS10-static.pgf  ss_boneS10.pgf  ss_legend_boneS10.pgf
SuperRefine/: stats.ods
SuperRefine/experiments/: parse.py  test.csv  tmp.out
SuperRefine/include/: iohb.h
SuperRefine/src/: ETree.cpp  Makefile  Ordering.cpp  SparseMatrixStructure.cpp  genmmd.f  iohb.c  main.cpp  mcssup.f  move_down.f  ordnat.f  ordsup.f  symbol_reordering.cpp  timer.cpp
carlsonInternship/adjacency-generators/: 3d_adjacency.c  torus_adjacency.c  torus_adjacency_no_sort.c
cmake/: gasnet.cmake  gasnetPostInstall.cmake  install_mak.cmake.in  symPACKConfig.cmake.in  symPACKDepends.cmake  sympack.mak.in  upcxx.cmake  upcxxPostInstall.cmake
cmake/Modules/: FindMETIS.cmake  FindMKL.cmake  FindParMETIS.cmake  FindSCOTCH.cmake  FindScotch.cmake  FindUPCXX.cmake
contrib/config/: cross-configure-intel-knl-gasnet  cross-configure-intel-knl-upcxx
delegate/: ETree.cpp  Makefile  PyCallCost.py  call_cost.cpp  check_md.cpp  delegateOrdering.py  delegateOrderingGroup.py  delegateOrderingSwapping.py  delegateOrderingWIP.py  delegateOrderingWorkInProgress.py  delegateProcess.txt  permute.py  util.cpp  util.h
driver/: H.csc  H.matrix  H.postordered.csc  H.postordered.matrix  Makefile  build.sh  launch_jobs.sh  parse.py  run.mpi.sh  run.scalapack.sh  run.sh  run_c_interface.cpp  run_cholesky.cpp  run_dense_fanboth.cpp  run_dense_fanboth_mpi.cpp  run_dense_fanboth_upcxx.cpp  run_dense_scalapack.cpp  run_isendrecv_test.cpp  run_pull_test.cpp  run_sparse_fanboth_upcxx.cpp  run_sparse_pull.cpp  run_sparse_push.cpp  run_sympack.cpp  run_sympack2D.cpp  test_dist_ws.cpp  test_ordering.cpp  unit_test.cpp  utils.hpp
driver/bodyy4/: bodyy4.csc  bodyy4.rb  bodyy4.txt  bodyy4_coord.mtx
driver/fv2/: fv2.rb  fv2.txt
experiments/: mapping_cost_impact.sh  ordering_cost.sh
include/: Cholesky.hpp  DistSparseMatrix.hpp  DistSparseMatrix_impl.hpp  ETree.hpp  Environment.hpp  FBMatrix.hpp  FBMatrix_mpi.hpp  FBMatrix_upcxx.hpp  IntervalTree.hpp  LogFile.hpp  Mapping.hpp  NZBlock.hpp  NZBlock_impl.hpp  NumMat.hpp  NumMat_impl.hpp  NumMat_upcxx.hpp  NumMat_upcxx_impl.hpp  NumVec.hpp  NumVec_impl.hpp  SparseMatrix.hpp  SparseMatrixStructure.hpp  SparseMatrix_impl.hpp  SuperNode.hpp  SupernodalMatrix.hpp  SupernodalMatrix_impl.hpp  SupernodalMatrix_impl_FB.hpp  blas.hpp  datatypes.hpp  environment_decl.hpp  environment_impl.hpp  lapack.hpp  ngchol.hpp  sympack.hpp  timer.hpp  upcxx_additions.hpp  upcxx_additions_impl.hpp  utility.hpp
include/ngchol/: Cholesky.hpp  CommPull.hpp  CommTypes.hpp  DistSparseMatrix.hpp  DistSparseMatrix_impl.hpp  ETree.hpp  Environment.hpp  Environment_impl.hpp  FBMatrix.hpp  FBMatrix_mpi.hpp  FBMatrix_upcxx.hpp  IntervalTree.hpp  IntervalTree_impl.hpp  LoadBalancer.hpp  LogFile.hpp  Mapping.hpp  NumMat.hpp  NumMat_impl.hpp  NumMat_upcxx.hpp  NumMat_upcxx_impl.hpp  NumVec.hpp  NumVec_impl.hpp  Ordering.hpp  Scheduler.hpp  SparseMatrix.hpp  SparseMatrixStructure.hpp  SuperNode.hpp  SuperNode2.hpp  SuperNode2_impl.hpp  SuperNode_impl.hpp  SupernodalMatrix.hpp  SupernodalMatrix2.hpp  SupernodalMatrix2_impl.hpp  SupernodalMatrix2_impl_FB_pull.hpp  (+18 more)
makefiles/: make.inc  make.inc.tau
ordering/: Makefile  box_main.f  grid_main.f
scripts/: analyze_time.py  check_error.sh  grindmerge  parse.py
src/: CMakeLists.txt  Cholesky.cpp  CommPull.cpp  DistSparseMatrixGraph.cpp  ETree.cpp  FBMatrix.cpp  FBMatrix_mpi.cpp  FBMatrix_upcxx.cpp  IntervalTree.cpp  LogFile.cpp  Makefile  Ordering.cpp  SparseMatrixStructure.cpp  SuperNode.cpp  betree.f  blas.cpp  boxnd.f  cuBLAS.cpp  degree.F  del_heap.f  fnroot.F  genrcm.F  global.cpp  gridnd.f  ins_heap.f  invinv.f  kernels.cu  lapack.cpp  mcssup.f  mmdelm.F  mmdupd.F  mmdupd.f  mod_heap.f  move_down.f  move_up.f  ordsup.f  rcm.F  rootls.F  supernodalTaskGraph.cpp  symPACK_c_interface.cpp  (+2 more)
src/TSPB/: compress_skel2.f  fnskel.f  fnskel2.f  near_ins.f  near_ins2.f  ordsup_ind_tsp_paths.f  ordsup_ind_tsp_paths2.f  ordsup_tsp_paths.f  ordsup_tsp_paths2.f  post_suptree.f  post_suptree2.f  sup_etpost.f  sup_etpost2.f
toolchains/: build_config.cmake  build_linux.cmake  build_linux_intel.cmake  build_mac.mathias.cmake  build_mathias.cmake  build_osx.cmake  cori.cmake  cori_knl.cmake  edison.cmake
utilities/: 3d_adjacency_zeroindex.c  Makefile  adj_to_hb.py  gen_grid.py  gen_grid.sh  gen_torus.sh  hb_to_metis_graph.py  hb_to_mtx.py  plot_box.py  spy.py  spy.sh  taurus_adjacency_self.c  torus_adjacency_zeroindex.c
vanilla_md/: ETree.cpp  ETree.hpp  Makefile  amdbar.f  call_cost.cpp  check_md.cpp  cost.cpp  cost.h  fastshift.cpp  geneticOrdering.c  geneticOrdering.h  geneticProcess.txt  input.adj  input4x4_5.adj  input4x4_7.adj  input_1138_bus.adj  input_bcsstk01.adj  input_bcsstk03.adj  input_bcsstk08.adj  input_nasa2146.adj  main.cpp  main_set.cpp  maximum_degree.cpp  minimum_degree.cpp  mmd.cpp  mmdelm.f  mmdint.f  mmdnum.f  ordmmd.f  random_pop.py  testfile.in  util.cpp  util.h
(+320 files in other folders)
